@@ -113,6 +113,9 @@ Use a different image instead of the cow.  The corresponding config file
 option is
 .IR alt_image .
 .TP
+.BI "--monitor=" N
+Make the cow appear on monitor N.
+.TP
 .B "--debug"
 Print messages about what
 .B xcowsay
